Add header and hero title

--- a/projects/umanu-project/index.html
+++ b/projects/umanu-project/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Umanu</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
 
@@ -16,7 +18,7 @@
     <a href="#">
       <!-- <img src="images/umanu-logo.png" alt="Logo Umanú "> -->
     </a>
-    <nav>
+    <nav class="navigation">
       <a href="">Home</a>
       <a href="">Sobre</a>
       <a href="">Loja</a>
@@ -27,12 +29,13 @@
   <section class="hero">
     <h1>Texto texto texto texto texto </h1>
     <h3>"Texto texto texto texto texto" </h3>
-    <a href="#" class="btn">Saiba mais</a>
+    <a href="#" class="btn">Visite nossa loja</a>
   </section>
 
   <section class="about-us-container">
     <h3>Texto texto texto texto texto</h3>
-    <p>Texto texto texto texto textoTexto texto texto texto textoTexto texto texto texto textoTexto texto texto texto textoTexto texto texto texto texto</p>
+    <p>Texto texto texto texto textoTexto texto texto texto textoTexto texto texto texto textoTexto texto texto texto
+      textoTexto texto texto texto texto</p>
     <hr>
     <ul class="grid">
       <li class="small" style="background-image: url('')"></li>
